--- a/SleepHealth_Occupations_EV.ipynb
+++ b/SleepHealth_Occupations_EV.ipynb
@@ -1,9 +1,16 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "8219f786",
+   "id": "47a2d146",
+   "metadata": {},
+   "source": [
+    "**Sleep Health vs. Occupation: Elisabeth Villarreal**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e901f6b5",
    "metadata": {},
    "source": [
     "**Null Hypothesis (H0):** A person’s occupation does not affect their sleep quality.\n",
@@ -13,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "200af0dc",
    "metadata": {},
    "outputs": [],
@@ -23,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "62c3ed5b",
    "metadata": {},
    "outputs": [],
@@ -37,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "05975757",
    "metadata": {},
    "outputs": [
@@ -185,14 +192,14 @@
        "4         140/90          85         3000    Sleep Apnea  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# File path\n",
-    "sleep_health_data = Path(\"Resources/Sleep_health_and_lifestyle_dataset.csv\")\n",
+    "sleep_health_data = Path(\"Sleep_Study/Sleep_health_and_lifestyle_dataset.csv\")\n",
     "\n",
     "# Read data \n",
     "sleep_df = pd.read_csv(sleep_health_data)\n",
@@ -201,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "a5315c37",
    "metadata": {
     "scrolled": true
@@ -224,7 +231,7 @@
        "Name: Occupation, dtype: int64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "4ee4863c",
    "metadata": {},
    "outputs": [
@@ -254,7 +261,7 @@
        "Name: Occupation, dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "id": "29b14b4b",
    "metadata": {
     "scrolled": false
@@ -1278,13 +1285,13 @@
     "occupation.plot.pie(autopct = \"%1.1f%%\", startangle = 45)\n",
     "plt.tight_layout()\n",
     "\n",
-    "plt.savefig(\"Images/occupation_piechart.png\")\n",
+    "plt.savefig(\"output_data/occupation_piechart.png\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "id": "17a9c677",
    "metadata": {
     "scrolled": true
@@ -1294,15 +1301,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/r8/n27_hztd5276212ft0c2q4x80000gn/T/ipykernel_21353/2154792038.py:2: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "/var/folders/r8/n27_hztd5276212ft0c2q4x80000gn/T/ipykernel_36448/2154792038.py:2: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
       "  sleep_quality_mean = filtered_sleep_df.groupby('Occupation').mean()['Quality of Sleep']\n",
-      "/var/folders/r8/n27_hztd5276212ft0c2q4x80000gn/T/ipykernel_21353/2154792038.py:3: FutureWarning: The default value of numeric_only in DataFrameGroupBy.median is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "/var/folders/r8/n27_hztd5276212ft0c2q4x80000gn/T/ipykernel_36448/2154792038.py:3: FutureWarning: The default value of numeric_only in DataFrameGroupBy.median is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
       "  sleep_quality_median = filtered_sleep_df.groupby('Occupation').median()['Quality of Sleep']\n",
-      "/var/folders/r8/n27_hztd5276212ft0c2q4x80000gn/T/ipykernel_21353/2154792038.py:4: FutureWarning: The default value of numeric_only in DataFrameGroupBy.var is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "/var/folders/r8/n27_hztd5276212ft0c2q4x80000gn/T/ipykernel_36448/2154792038.py:4: FutureWarning: The default value of numeric_only in DataFrameGroupBy.var is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
       "  sleep_quality_var = filtered_sleep_df.groupby('Occupation').var()['Quality of Sleep']\n",
-      "/var/folders/r8/n27_hztd5276212ft0c2q4x80000gn/T/ipykernel_21353/2154792038.py:5: FutureWarning: The default value of numeric_only in DataFrameGroupBy.std is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "/var/folders/r8/n27_hztd5276212ft0c2q4x80000gn/T/ipykernel_36448/2154792038.py:5: FutureWarning: The default value of numeric_only in DataFrameGroupBy.std is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
       "  sleep_quality_std = filtered_sleep_df.groupby('Occupation').std()['Quality of Sleep']\n",
-      "/var/folders/r8/n27_hztd5276212ft0c2q4x80000gn/T/ipykernel_21353/2154792038.py:6: FutureWarning: The default value of numeric_only in DataFrameGroupBy.sem is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "/var/folders/r8/n27_hztd5276212ft0c2q4x80000gn/T/ipykernel_36448/2154792038.py:6: FutureWarning: The default value of numeric_only in DataFrameGroupBy.sem is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
       "  sleep_quality_sem = filtered_sleep_df.groupby('Occupation').sem()['Quality of Sleep']\n"
      ]
     },
@@ -1425,7 +1432,7 @@
        "Teacher                     0.659740                 0.104314  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1451,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "id": "debc0d37",
    "metadata": {},
    "outputs": [
@@ -1459,15 +1466,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/r8/n27_hztd5276212ft0c2q4x80000gn/T/ipykernel_21353/3340092702.py:2: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "/var/folders/r8/n27_hztd5276212ft0c2q4x80000gn/T/ipykernel_36448/3340092702.py:2: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
       "  stress_level_mean = filtered_sleep_df.groupby('Occupation').mean()['Stress Level']\n",
-      "/var/folders/r8/n27_hztd5276212ft0c2q4x80000gn/T/ipykernel_21353/3340092702.py:3: FutureWarning: The default value of numeric_only in DataFrameGroupBy.median is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "/var/folders/r8/n27_hztd5276212ft0c2q4x80000gn/T/ipykernel_36448/3340092702.py:3: FutureWarning: The default value of numeric_only in DataFrameGroupBy.median is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
       "  stress_level_median = filtered_sleep_df.groupby('Occupation').median()['Stress Level']\n",
-      "/var/folders/r8/n27_hztd5276212ft0c2q4x80000gn/T/ipykernel_21353/3340092702.py:4: FutureWarning: The default value of numeric_only in DataFrameGroupBy.var is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "/var/folders/r8/n27_hztd5276212ft0c2q4x80000gn/T/ipykernel_36448/3340092702.py:4: FutureWarning: The default value of numeric_only in DataFrameGroupBy.var is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
       "  stress_level_var = filtered_sleep_df.groupby('Occupation').var()['Stress Level']\n",
-      "/var/folders/r8/n27_hztd5276212ft0c2q4x80000gn/T/ipykernel_21353/3340092702.py:5: FutureWarning: The default value of numeric_only in DataFrameGroupBy.std is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "/var/folders/r8/n27_hztd5276212ft0c2q4x80000gn/T/ipykernel_36448/3340092702.py:5: FutureWarning: The default value of numeric_only in DataFrameGroupBy.std is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
       "  stress_level_std = filtered_sleep_df.groupby('Occupation').std()['Stress Level']\n",
-      "/var/folders/r8/n27_hztd5276212ft0c2q4x80000gn/T/ipykernel_21353/3340092702.py:6: FutureWarning: The default value of numeric_only in DataFrameGroupBy.sem is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "/var/folders/r8/n27_hztd5276212ft0c2q4x80000gn/T/ipykernel_36448/3340092702.py:6: FutureWarning: The default value of numeric_only in DataFrameGroupBy.sem is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
       "  stress_level_sem = filtered_sleep_df.groupby('Occupation').sem()['Stress Level']\n"
      ]
     },
@@ -1590,7 +1597,7 @@
        "Teacher                    1.061868                0.167896  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1616,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "id": "61c317a5",
    "metadata": {},
    "outputs": [
@@ -1804,7 +1811,7 @@
        "Teacher                    1.061868                0.167896  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1817,7 +1824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "id": "25bfd1c0",
    "metadata": {
     "scrolled": true
@@ -2843,21 +2850,21 @@
     "plt.title(\"Correlation Between Occupation Stress and Sleep Quality\")\n",
     "plt.tight_layout()\n",
     "\n",
-    "plt.savefig(\"Images/occupation_sleep_stress_corr.png\")\n",
+    "plt.savefig(\"output_data/occupation_sleep_stress_corr.png\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ae979d5e",
+   "id": "7a5ea2e9",
    "metadata": {},
    "source": [
-    "**Analysis:** Sleep quality and occupation stress have a negative correlation. The higher the occupation stress, the lower the sleep quality."
+    "**Analysis:** Sleep quality and occupation stress have a negative correlation (r-value = -0.86). The higher the occupation stress, the lower the sleep quality."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "id": "e5e5d8be",
    "metadata": {},
    "outputs": [
@@ -2867,7 +2874,7 @@
        "Ttest_indResult(statistic=3.6523583734752507, pvalue=0.0038807552010945226)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2882,7 +2889,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1634a8d",
+   "id": "ec280767",
    "metadata": {},
    "source": [
     "**Analysis:** The p-value is less than 0.05 (0.004). Therefore, sleep quality and occupation stress are statistically significant and we can reject the null hypothesis."
@@ -2891,7 +2898,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3357fb0",
+   "id": "175a0dc2",
    "metadata": {},
    "outputs": [],
    "source": []
